# OpenShell

./: Cargo.toml
architecture/: security-policy.md
crates/openshell-cli/src/: main.rs  run.rs
crates/openshell-core/src/proto/: mod.rs
crates/openshell-core/tests/: policy_driver_proto.rs
crates/openshell-policy-engine-null/: Cargo.toml
crates/openshell-policy-engine-null/src/: lib.rs  main.rs
crates/openshell-policy-engine-null/tests/: integration.rs
crates/openshell-server/: Cargo.toml
crates/openshell-server/examples/: rpv_shadow_demo.rs
crates/openshell-server/src/: config_file.rs  lib.rs  rpv_shadow.rs
crates/openshell-server/src/grpc/: policy.rs  provider.rs  sandbox.rs
crates/openshell-server/src/persistence/: mod.rs
crates/openshell-server/src/policy/: mod.rs
crates/openshell-server/src/policy_provider/: attested.rs  local.rs  mod.rs  source.rs  trust_store.rs
crates/openshell-tui/src/ui/: mod.rs  providers.rs
docs/sandboxes/: policies.mdx
proto/: policy.proto  policy_driver.proto
rfc/0005-policy-provider/: README.md
